--- a/cqrsCore/cqrsCore.csproj
+++ b/cqrsCore/cqrsCore.csproj
@@ -9,16 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog.Extensions" Version="2.2.2" />
     <PackageReference Include="SimpleInjector" Version="5.4.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="cqrsCore">
-      <HintPath>..\ExampleMvc\bin\Debug\net6.0\cqrsCore.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Extensions.Logging.Abstractions">
-      <HintPath>..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\6.0.7\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
-    </Reference>
+    <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc.Core" Version="5.4.0" />
   </ItemGroup>
 
 </Project>
