--- a/cqrsCore/cqrsCore.csproj
+++ b/cqrsCore/cqrsCore.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <PackageId>Kmd.CqrsCore</PackageId>
+    <Version>1.0.1</Version>
+    <Authors>Tim Hayes, Kevin Mollencopf</Authors>
+    <RepositoryUrl>https://gitlab.kmserver.co/kmdeveloping/cqrs-core</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Company>KmDeveloping</Company>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>cqrsCore</RootNamespace>
