--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ deploy:
   script:
     - dotnet pack cqrsCore/cqrsCore.csproj -c Release
     - dotnet nuget add source "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
-    - dotnet nuget push "cqrsCore/bin/Release/*.nupkg" --source gitlab
+    - dotnet nuget push "cqrsCore/bin/Release/*.nupkg" --source gitlab --skip-duplicates
   only:
     - master
   environment: production
