--- a/cqrsCore/cqrsCore.csproj
+++ b/cqrsCore/cqrsCore.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <PackageId>Kmd.CqrsCore</PackageId>
     <Version>1.0.4</Version>
     <Authors>Tim Hayes, Kevin Mollencopf</Authors>
