--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
           NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build project
-        run: dotnet build --project cqrsCore -c Release
+        run: dotnet build cqrsCore -c Release
 
       - name: Generate a NuGet package
-        run: dotnet pack --project cqrsCore --no-build -c Release -o .
+        run: dotnet pack --no-build -c Release -o .
 
       - name: Push to GitHub package registry
         run: dotnet nuget push *.nupkg
