--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,15 @@ jobs:
         with:
           dotnet-version: '6.0.*'
           # Authenticates packages to push to GPR
-          source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+          source-url: https://nuget.pkg.github.com
+          scope: '@kmdeveloping'
         env:
-          NUGET_AUTH_TOKEN: '%NUGET_AUTH_TOKEN%'
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Install dependencies
         run: dotnet restore
         env:
-          NUGET_AUTH_TOKEN: ${{ github.token }}
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Build
         run: dotnet build cqrsCore -c Release --no-restore
@@ -45,4 +46,4 @@ jobs:
       - name: PushGithub
         run: dotnet nuget push **/*.nupkg --no-symbols --skip-duplicate
         env:
-          NUGET_AUTH_TOKEN: ${{ github.token }}
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
