--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
         with:
           dotnet-version: '6.0.*'
           # Authenticates packages to push to GPR
-          source-url: https://nuget.pkg.github.com
-          scope: '@kmdeveloping'
+          source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
         env:
           NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
@@ -46,4 +45,4 @@ jobs:
       - name: PushGithub
         run: dotnet nuget push **/*.nupkg --no-symbols --skip-duplicate
         env:
-          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NUGET_AUTH_TOKEN: ${{ github.token }}
