--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
       - name: PushGithub
         run: dotnet nuget push **/*.nupkg --no-symbols --skip-duplicate
         env:
-          NUGET_AUTH_TOKEN: ${{ github.token }}
+          NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
