--- a/CqrsFramework/CqrsFramework.csproj
+++ b/CqrsFramework/CqrsFramework.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Destructurama.Attributed" Version="4.0.0" />
     <PackageReference Include="Polly" Version="8.2.0" />
+    <PackageReference Include="RateLimiter" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Extensions" Version="2.2.2" />
     <PackageReference Include="SimpleInjector" Version="5.4.3" />
