--- a/CqrsFramework/CqrsFramework.csproj
+++ b/CqrsFramework/CqrsFramework.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <PackageId>Kmd.CqrsCore</PackageId>
+    <TargetFramework>net6.0, net8.0</TargetFramework>
+    <PackageId>KmsCqrsFramework</PackageId>
     <Version>1.0.5</Version>
     <Authors>Tim Hayes, Kevin Mollencopf</Authors>
     <RepositoryUrl>https://github.com/kmdeveloping/kms-cqrs</RepositoryUrl>
