--- a/CqrsFramework/CqrsFramework.csproj
+++ b/CqrsFramework/CqrsFramework.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0, net8.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PackageId>KmsCqrsFramework</PackageId>
     <Version>1.0.5</Version>
     <Authors>Tim Hayes, Kevin Mollencopf</Authors>
@@ -17,7 +17,7 @@
     <PackageReference Include="Destructurama.Attributed" Version="4.0.0" />
     <PackageReference Include="Polly" Version="8.4.0" />
     <PackageReference Include="RateLimiter" Version="2.2.0" />
-    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog" Version="4.0.0" />
     <PackageReference Include="Serilog.Extensions" Version="2.2.2" />
     <PackageReference Include="SimpleInjector" Version="5.4.6" />
     <PackageReference Include="SimpleInjector.Integration.AspNetCore.Mvc.Core" Version="5.5.0" />
